--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-async-storage": "^0.0.1",
     "react-native-component-inview": "^1.0.2",
     "react-native-config": "^1.5.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.2.0",
-    "react-native-paper": "^5.10.4",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
