--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "expo": "~49.0.11",
+    "expo-contacts": "^14.0.5",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "react-native-async-storage": "^0.0.1",
     "react-native-component-inview": "^1.0.2",
     "react-native-config": "^1.5.1",
+    "react-native-contacts": "^8.0.4",
     "react-native-dotenv": "^3.4.9",
     "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
