--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "base64-js": "^1.5.1",
     "dotenv": "^16.3.1",
     "expo": "~49.0.11",
+    "expo-camera": "~13.4.4",
     "expo-contacts": "^14.0.5",
+    "expo-file-system": "~15.4.5",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^9.23.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-async-storage": "^0.0.1",
@@ -38,13 +43,14 @@
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native-dotenv": "^0.2.0",
-    "react-native-svg-transformer": "^1.1.0",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.1.3"
   },
   "private": true
