--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "base64-js": "^1.5.1",
     "dotenv": "^16.3.1",
     "expo": "~49.0.11",
-    "expo-camera": "~13.4.4",
+    "expo-camera": "^13.4.4",
     "expo-contacts": "^14.0.5",
     "expo-file-system": "~15.4.5",
     "expo-image-picker": "~14.3.2",
